# smart-contract-execution-monitoring-system

./: LICENSE  README.md  go.mod  nectar.go
.docker/: .gitignore  api-database.yml  config.yml  fabric-tools.yml  hyperledger-fabric-binaries.yml  hyperledger-fabric-network.yml  hyperledger-fabric-orderer.yml  hyperledger-fabric-tools.yml
.docker/envs/: example.api-database.env
.docker/hyperledger-fabric/: .gitignore  Dockerfile  README.md  configtx.yml  crypto-config.yml  cryptogen.yml  hyperledger-fabric-network.yml  hyperledger-fabric-tools.yml  network.yml  orderer.yml  peer-base.yml  supplychain.go  tools.yml
.docker/scems/: .gitignore  docker-compose.yml  mongo.yml  network.yml  postgres.yml  rabbitmq.yml
.scripts/config/: _colors.sh  _icons.sh
.scripts/dev/: down.sh  up.sh
.scripts/scems/: down.sh  up.sh
api/: .env.example  .env.test  .eslintrc.json  .gitignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
api/.husky/: pre-commit
api/src/: app-testing.module.ts  app.module.ts  app.ts  const.ts  main.ts  server.ts
docs/: index.html  mkdocs.yml  pyproject.toml
docs/docs/: index.md
docs/search/: search_index.json
mkdocs/: mkdocs.yml  pyproject.toml
mkdocs/site/: 404.html  index.html  search.html
scripts/: exclude-api-volumes.sh  start-api-database.sh  start-development.sh  stop-api-database.sh  stop-development.sh
scripts/config/: _colors.sh  _icons.sh
scripts/hyperledger-fabric/: 3_generate_channel.sh  (+18 more)
web/: .eslintrc.json  README.md  angular.json  eslint.config.mjs  package-lock.json  package.json
(+550 files in other folders)
