[tool.poetry]
name = "nectar-framework-docs"
version = "0.1.0"
description = "Nectar Framework Docs"
authors = ["Mailson Teles Borges <mailson.borges@sou.unijui.edu.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
